# cBarIlan

./: .gitignore  CMakeLists.txt  CMakePresets.json
ex1/: CMakeLists.txt  ex0.c  main.c
ex2/: CMakeLists.txt  Rhombus.c  main.c
ex3/: CMakeLists.txt  main.c
ex4/: CMakeLists.txt
ex5/: CMakeLists.txt
ex6/: CMakeLists.txt
